fix menu alignment

--- a/style.css
+++ b/style.css
@@ -44,7 +44,6 @@ body {
 }
 
 .main-nav {
-  align-items: center;
   grid-column: 3 / -1;
   margin-top: 0.5em;
 }
@@ -63,6 +62,7 @@ body {
 
 .main-nav ul li a {
   color: #000;
+  display: block;
   padding: 1em;
   text-decoration: none;
 }
